@@ -293,6 +293,19 @@ public class Movie implements Comparable<Movie>, Cloneable, Identifiable, IMovie
             this.movieFiles.add(movieFile);
         }
     }
+    
+    public void removeMovieFile(MovieFile movieFile) {
+    	if (movieFile != null) {
+    		this.isDirty = true;
+    		for (MovieFile mf : this.movieFiles) {
+    			if (mf.compareTo(movieFile) == 0) {
+    				this.movieFiles.remove(mf);
+    				break;
+    			}
+    		}
+    		
+    	}
+    }
 
     public boolean hasNewMovieFiles() {
         for (MovieFile movieFile : movieFiles) {
